module-4/templates/monitoring/grafana/02-grafana-stack.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
spec:
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        fsGroup: 472
        supplementalGroups:
          - 0
      containers:
        - name: grafana
          image: grafana/grafana:10.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http-grafana
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /robots.txt
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 250m
              memory: 750Mi
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-pv
            # @see: https://devopscube.com/setup-grafana-kubernetes/
            - mountPath: /etc/grafana/provisioning/datasources
              name: grafana-datasource-config
            - mountPath: /etc/grafana/provisioning/dashboards
              name: grafana-dashboard-config
            - mountPath: /dashboards/hub
              name: grafana-hub-dashboards
            - mountPath: /dashboards/flux
              name: grafana-flux-dashboards
      volumes:
        - name: grafana-pv
          persistentVolumeClaim:
            claimName: grafana-pvc
        - name: grafana-datasource-config
          configMap:
            defaultMode: 420
            name: grafana-datasource-config
        - name: grafana-dashboard-config
          configMap:
            defaultMode: 420
            name: grafana-dashboard-config
        - name: grafana-hub-dashboards
          configMap:
            defaultMode: 420
            name: grafana-hub-dashboards
        - name: grafana-flux-dashboards
          configMap:
            defaultMode: 420
            name: grafana-flux-dashboards

---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: http-grafana
      name: web
  selector:
    app: grafana
  sessionAffinity: None
