module-4/templates/monitoring/grafana/03-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`grafana.${EXTERNAL_IP}.sslip.io`)
      services:
        - name: grafana
          port: 3000
          namespace: monitoring
